// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render App when "checkPageAction" is false 1`] = `
<div>
  <section
    class="css-m36rcd"
  >
    <div
      class="dms-layout-side css-1mju0nn"
    >
      <div
        class="dms-layout-side-start"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="custom-icon-spin-dot ant-spin-dot css-u3jcp4"
              >
                <svg
                  fill="currentColor"
                  height="30"
                  viewBox="0 0 24 30"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="currentColor"
                    height="10"
                    opacity="0.2"
                    width="4"
                    x="0"
                    y="10"
                  >
                    <animate
                      attributeName="opacity"
                      attributeType="XML"
                      begin="0s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="0.2; 1; .2"
                    />
                    <animate
                      attributeName="height"
                      attributeType="XML"
                      begin="0s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 20; 10"
                    />
                    <animate
                      attributeName="y"
                      attributeType="XML"
                      begin="0s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 5; 10"
                    />
                  </rect>
                  <rect
                    fill="currentColor"
                    height="10"
                    opacity="0.2"
                    width="4"
                    x="8"
                    y="10"
                  >
                    <animate
                      attributeName="opacity"
                      attributeType="XML"
                      begin="0.15s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="0.2; 1; .2"
                    />
                    <animate
                      attributeName="height"
                      attributeType="XML"
                      begin="0.15s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 20; 10"
                    />
                    <animate
                      attributeName="y"
                      attributeType="XML"
                      begin="0.15s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 5; 10"
                    />
                  </rect>
                  <rect
                    fill="currentColor"
                    height="10"
                    opacity="0.2"
                    width="4"
                    x="16"
                    y="10"
                  >
                    <animate
                      attributeName="opacity"
                      attributeType="XML"
                      begin="0.3s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="0.2; 1; .2"
                    />
                    <animate
                      attributeName="height"
                      attributeType="XML"
                      begin="0.3s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 20; 10"
                    />
                    <animate
                      attributeName="y"
                      attributeType="XML"
                      begin="0.3s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 5; 10"
                    />
                  </rect>
                </svg>
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="css-hndaa8"
            >
              <div
                class="title-wrapper"
              >
                <div
                  class="title"
                >
                  <span
                    class="label label-primary"
                  >
                    Action
                  </span>
                  <span
                    class="label label-base"
                  >
                    SQLE
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-22avtw"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center action-space-wrapper"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="action-item global-dashboard"
                      >
                        <svg
                          class="TodoListOutlined_svg__icon"
                          color="currentColor"
                          height="18"
                          viewBox="0 0 1024 1024"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M924 540c-19.9 0-36 16.1-36 36v312H136V136h568c19.9 0 36-16.1 36-36s-16.1-36-36-36H136c-39.8 0-72 32.2-72 72v752c0 39.8 32.2 72 72 72h752c39.8 0 72-32.2 72-72V576c0-19.9-16.1-36-36-36"
                            fill="currentColor"
                          />
                          <path
                            d="M316.5 478.5c-14.1-14.1-36.9-14.1-50.9 0-14.1 14.1-14.1 36.9 0 50.9l178.2 178.2c5.7 5.7 12.8 9.1 20.1 10.2 11.2 1.9 23.1-1.4 31.7-10l454.2-454.2c14.1-14.1 14.1-36.9 0-50.9-14.1-14.1-36.9-14.1-50.9 0l-429.2 429z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="action-item view-rule"
                      >
                        <svg
                          color="currentColor"
                          height="18"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-single ant-select-show-arrow"
              searchinputref="[object Object]"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                >
                  <span
                    class="custom-select-placeholder css-qly0fu"
                  >
                    <span
                      class="custom-select-placeholder-prefix"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                          fill="#EBAD1C"
                        />
                      </svg>
                    </span>
                    <span
                      class="custom-select-placeholder-value"
                    >
                      请选择{{name}}
                    </span>
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <svg
                  class="custom-icon-right-arrow-select-suffix"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <ul
          class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
      <div
        class="dms-layout-side-end"
      >
        <span
          class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc"
        >
          <span
            class="ant-avatar-string"
            style="transform: scale(1) translateX(-50%);"
          >
            A
          </span>
        </span>
      </div>
    </div>
    <div
      class="dms-layout-content"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          用户引导
        </div>
        <div
          class="extra"
        />
      </div>
      <section
        class="css-1wil037"
      >
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                height="24"
                viewBox="0 0 18 18"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP1
                </div>
                <div
                  class="step-title"
                >
                  数据源管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  数据源管理
                </div>
                <div
                  class="desc"
                >
                  管理数据源相关操作
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看列表
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          添加数据源
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  外部数据源
                </div>
                <div
                  class="desc"
                >
                  管理外部数据源相关操作
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看列表
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          新建同步任务
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                height="24"
                viewBox="0 0 18 18"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 7.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6M4.125 9.75a1.875 1.875 0 1 0 0-3.75 1.875 1.875 0 0 0 0 3.75M15.75 7.875a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0M9 8.25A3.75 3.75 0 0 1 12.75 12v4.5h-7.5V12A3.75 3.75 0 0 1 9 8.25M3.75 12c0-.52.075-1.022.216-1.496l-.127.011a2.625 2.625 0 0 0-2.339 2.61V16.5h2.25zm12.75 4.5v-3.375a2.626 2.626 0 0 0-2.466-2.62c.14.473.216.975.216 1.495v4.5z"
                  fill="currentColor"
                />
                <path
                  d="M4.125 9.75a1.875 1.875 0 1 0 0-3.75 1.875 1.875 0 0 0 0 3.75M15.75 7.875a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0M3.75 12c0-.52.075-1.022.216-1.496l-.127.011a2.625 2.625 0 0 0-2.339 2.61V16.5h2.25zm12.75 4.5v-3.375a2.626 2.626 0 0 0-2.466-2.62c.14.473.216.975.216 1.495v4.5z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP2
                </div>
                <div
                  class="step-title"
                >
                  成员与权限管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  成员与权限管理
                </div>
                <div
                  class="desc"
                >
                  为项目添加成员/成员组，并配置相应的数据源操作权限
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看成员
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                height="24"
                viewBox="0 0 18 18"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 6H15a.75.75 0 0 1 .75.75v9a.75.75 0 0 1-.75.75H3a.75.75 0 0 1-.75-.75v-9A.75.75 0 0 1 3 6h1.5v-.75a4.5 4.5 0 0 1 9 0zM12 6v-.75a3 3 0 0 0-6 0V6zm-3.75 4.5V12h1.5v-1.5zm-3 0V12h1.5v-1.5zm6 0V12h1.5v-1.5z"
                  fill="currentColor"
                />
                <path
                  d="M12 6v-.75a3 3 0 1 0-6 0V6H4.5v-.75a4.5 4.5 0 0 1 9 0V6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP3
                </div>
                <div
                  class="step-title"
                >
                  数据安全规则管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  审核管理
                </div>
                <div
                  class="desc"
                >
                  查看平台支持的审核规则，并自定义审核规则模板，监察已生成的SQL，或使用SQL审核改善SQL质量
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看审核规则
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看规则模板
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                           查看SQL管控配置
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          新建SQL审核
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  审批流程
                </div>
                <div
                  class="desc"
                >
                  根据实际业务流转变更流程模板
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          配置审批流程模板
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.833 1.5c-.736 0-1.333.597-1.333 1.333V3.5h13.667c.736 0 1.333.597 1.333 1.333v15.334q0 .172-.042.333h.709c.736 0 1.333-.597 1.333-1.333V2.833c0-.736-.597-1.333-1.333-1.333z"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.833 3.5c-.736 0-1.333.597-1.333 1.333v16.334c0 .736.597 1.333 1.333 1.333h14.334c.736 0 1.333-.597 1.333-1.333V4.833c0-.736-.597-1.333-1.333-1.333zM7 9.667C7 9.298 7.298 9 7.667 9h6.666c.368 0 .667.298.667.667v.666a.667.667 0 0 1-.667.667H7.667A.667.667 0 0 1 7 10.333zm0 5c0-.368.298-.667.667-.667h3.666c.368 0 .667.299.667.667v.666a.667.667 0 0 1-.667.667H7.667A.667.667 0 0 1 7 15.333z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP4
                </div>
                <div
                  class="step-title"
                >
                  数据查询与变更
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  SQL窗口
                </div>
                <div
                  class="desc"
                >
                  使用在线的数据编辑器（CloudBeaver）进行SQL查询和编辑
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          进入SQL工作台
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  数据变更
                </div>
                <div
                  class="desc"
                >
                  在线提起SQL变更申请，经由审批流程完成上线
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起SQL工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  数据导出
                </div>
                <div
                  class="desc"
                >
                  发起数据导出工单，审核通过后获取数据集。
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起导出工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.33 3.271a3.5 3.5 0 0 1 4.472 4.474L20.647 18.59l-2.122 2.121L7.68 9.867a3.5 3.5 0 0 1-4.472-4.474L5.444 7.63a1.5 1.5 0 1 0 2.12-2.121L5.33 3.27zm10.367 1.884 3.182-1.768 1.414 1.414-1.768 3.182-1.768.354-2.12 2.121-1.415-1.414 2.12-2.121zm-7.071 7.778 2.12 2.122-4.95 4.95A1.5 1.5 0 0 1 3.58 17.99l.097-.107z"
                />
                <path
                  d="m15.697 5.155 3.182-1.768 1.414 1.414-1.768 3.182-1.768.354-2.12 2.121-1.415-1.414 2.12-2.121zm-7.071 7.778 2.12 2.122-4.95 4.95A1.5 1.5 0 0 1 3.58 17.99l.097-.107z"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP5
                </div>
                <div
                  class="step-title"
                >
                  运维与审计
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  操作审计
                </div>
                <div
                  class="desc"
                >
                  审计平台内用户操作
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          SQLE操作记录
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`App render App when "isDriverInfoFetched" is equal false 1`] = `<div />`;

exports[`App render App when "isFeatureSupportFetched" is equal false 1`] = `<div />`;

exports[`App render App when "isUserInfoFetched" is equal false 1`] = `<div />`;

exports[`App render App when token is existed 1`] = `
<div>
  <section
    class="css-m36rcd"
  >
    <div
      class="dms-layout-side css-1mju0nn"
    >
      <div
        class="dms-layout-side-start"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="custom-icon-spin-dot ant-spin-dot css-u3jcp4"
              >
                <svg
                  fill="currentColor"
                  height="30"
                  viewBox="0 0 24 30"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="currentColor"
                    height="10"
                    opacity="0.2"
                    width="4"
                    x="0"
                    y="10"
                  >
                    <animate
                      attributeName="opacity"
                      attributeType="XML"
                      begin="0s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="0.2; 1; .2"
                    />
                    <animate
                      attributeName="height"
                      attributeType="XML"
                      begin="0s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 20; 10"
                    />
                    <animate
                      attributeName="y"
                      attributeType="XML"
                      begin="0s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 5; 10"
                    />
                  </rect>
                  <rect
                    fill="currentColor"
                    height="10"
                    opacity="0.2"
                    width="4"
                    x="8"
                    y="10"
                  >
                    <animate
                      attributeName="opacity"
                      attributeType="XML"
                      begin="0.15s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="0.2; 1; .2"
                    />
                    <animate
                      attributeName="height"
                      attributeType="XML"
                      begin="0.15s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 20; 10"
                    />
                    <animate
                      attributeName="y"
                      attributeType="XML"
                      begin="0.15s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 5; 10"
                    />
                  </rect>
                  <rect
                    fill="currentColor"
                    height="10"
                    opacity="0.2"
                    width="4"
                    x="16"
                    y="10"
                  >
                    <animate
                      attributeName="opacity"
                      attributeType="XML"
                      begin="0.3s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="0.2; 1; .2"
                    />
                    <animate
                      attributeName="height"
                      attributeType="XML"
                      begin="0.3s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 20; 10"
                    />
                    <animate
                      attributeName="y"
                      attributeType="XML"
                      begin="0.3s"
                      dur="0.6s"
                      repeatCount="indefinite"
                      values="10; 5; 10"
                    />
                  </rect>
                </svg>
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="css-hndaa8"
            >
              <div
                class="title-wrapper"
              >
                <div
                  class="title"
                >
                  <span
                    class="label label-primary"
                  >
                    Action
                  </span>
                  <span
                    class="label label-base"
                  >
                    SQLE
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-22avtw"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center action-space-wrapper"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="action-item global-dashboard"
                      >
                        <svg
                          class="TodoListOutlined_svg__icon"
                          color="currentColor"
                          height="18"
                          viewBox="0 0 1024 1024"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M924 540c-19.9 0-36 16.1-36 36v312H136V136h568c19.9 0 36-16.1 36-36s-16.1-36-36-36H136c-39.8 0-72 32.2-72 72v752c0 39.8 32.2 72 72 72h752c39.8 0 72-32.2 72-72V576c0-19.9-16.1-36-36-36"
                            fill="currentColor"
                          />
                          <path
                            d="M316.5 478.5c-14.1-14.1-36.9-14.1-50.9 0-14.1 14.1-14.1 36.9 0 50.9l178.2 178.2c5.7 5.7 12.8 9.1 20.1 10.2 11.2 1.9 23.1-1.4 31.7-10l454.2-454.2c14.1-14.1 14.1-36.9 0-50.9-14.1-14.1-36.9-14.1-50.9 0l-429.2 429z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="action-item report-statistics"
                      >
                        <svg
                          color="currentColor"
                          height="18"
                          viewBox="0 0 16 16"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M2 8h2.667v6H2zm9.333-2.667H14V14h-2.667zm-4.666-4h2.666V14H6.667z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="action-item view-rule"
                      >
                        <svg
                          color="currentColor"
                          height="18"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="action-item knowledge"
                      >
                        <svg
                          color="currentColor"
                          height="18"
                          viewBox="0 0 160 140"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 103.333v-90c0-11.045 8.954-20 20-20h93.333A6.667 6.667 0 0 1 140 0v120a6.667 6.667 0 0 1-6.667 6.667h-90C30.447 126.667 20 116.22 20 103.333m106.667 10v-20H43.333c-5.523 0-10 4.478-10 10s4.477 10 10 10zm-60-106.666H40a6.667 6.667 0 0 0-6.667 6.666v68.912a23.24 23.24 0 0 1 10-2.245h83.334V6.667h-13.334V60L90 46.667 66.667 60z"
                            fill="url(#BookMarkOutlined_svg__a)"
                          />
                          <defs>
                            <lineargradient
                              gradientUnits="userSpaceOnUse"
                              id="BookMarkOutlined_svg__a"
                              x1="80"
                              x2="80"
                              y1="-6.667"
                              y2="126.667"
                            >
                              <stop
                                stop-color="currentColor"
                                stop-opacity="0.4"
                              />
                              <stop
                                offset="1"
                                stop-color="currentColor"
                              />
                            </lineargradient>
                          </defs>
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-single ant-select-show-arrow"
              searchinputref="[object Object]"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                >
                  <span
                    class="custom-select-placeholder css-qly0fu"
                  >
                    <span
                      class="custom-select-placeholder-prefix"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                          fill="#EBAD1C"
                        />
                      </svg>
                    </span>
                    <span
                      class="custom-select-placeholder-value"
                    >
                      请选择{{name}}
                    </span>
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <svg
                  class="custom-icon-right-arrow-select-suffix"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <ul
          class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
      <div
        class="dms-layout-side-end"
      >
        <span
          class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc"
        >
          <span
            class="ant-avatar-string"
            style="transform: scale(1) translateX(-50%);"
          >
            A
          </span>
        </span>
        <div
          class="global-system-icon-wrapper"
        >
          <svg
            class="custom-icon-global-system"
            color=""
            fill="none"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.125 4.875 9 .75 1.875 4.875v8.25L9 17.25l7.125-4.125zM9 12.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5"
              fill="#C3C6CD"
              fill-rule="evenodd"
            />
            <path
              d="M9 11.25a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5"
              fill="#8A8F99"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="dms-layout-content"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          用户引导
        </div>
        <div
          class="extra"
        />
      </div>
      <section
        class="css-1wil037"
      >
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                height="24"
                viewBox="0 0 18 18"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP1
                </div>
                <div
                  class="step-title"
                >
                  数据源管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  数据源管理
                </div>
                <div
                  class="desc"
                >
                  管理数据源相关操作
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看列表
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          添加数据源
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  外部数据源
                </div>
                <div
                  class="desc"
                >
                  管理外部数据源相关操作
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看列表
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          新建同步任务
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                height="24"
                viewBox="0 0 18 18"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 7.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6M4.125 9.75a1.875 1.875 0 1 0 0-3.75 1.875 1.875 0 0 0 0 3.75M15.75 7.875a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0M9 8.25A3.75 3.75 0 0 1 12.75 12v4.5h-7.5V12A3.75 3.75 0 0 1 9 8.25M3.75 12c0-.52.075-1.022.216-1.496l-.127.011a2.625 2.625 0 0 0-2.339 2.61V16.5h2.25zm12.75 4.5v-3.375a2.626 2.626 0 0 0-2.466-2.62c.14.473.216.975.216 1.495v4.5z"
                  fill="currentColor"
                />
                <path
                  d="M4.125 9.75a1.875 1.875 0 1 0 0-3.75 1.875 1.875 0 0 0 0 3.75M15.75 7.875a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0M3.75 12c0-.52.075-1.022.216-1.496l-.127.011a2.625 2.625 0 0 0-2.339 2.61V16.5h2.25zm12.75 4.5v-3.375a2.626 2.626 0 0 0-2.466-2.62c.14.473.216.975.216 1.495v4.5z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP2
                </div>
                <div
                  class="step-title"
                >
                  成员与权限管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  成员与权限管理
                </div>
                <div
                  class="desc"
                >
                  为项目添加成员/成员组，并配置相应的数据源操作权限
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看成员
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                height="24"
                viewBox="0 0 18 18"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 6H15a.75.75 0 0 1 .75.75v9a.75.75 0 0 1-.75.75H3a.75.75 0 0 1-.75-.75v-9A.75.75 0 0 1 3 6h1.5v-.75a4.5 4.5 0 0 1 9 0zM12 6v-.75a3 3 0 0 0-6 0V6zm-3.75 4.5V12h1.5v-1.5zm-3 0V12h1.5v-1.5zm6 0V12h1.5v-1.5z"
                  fill="currentColor"
                />
                <path
                  d="M12 6v-.75a3 3 0 1 0-6 0V6H4.5v-.75a4.5 4.5 0 0 1 9 0V6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP3
                </div>
                <div
                  class="step-title"
                >
                  数据安全规则管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  审核管理
                </div>
                <div
                  class="desc"
                >
                  查看平台支持的审核规则，并自定义审核规则模板，监察已生成的SQL，或使用SQL审核改善SQL质量
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看审核规则
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看规则模板
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                           查看SQL管控配置
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          新建SQL审核
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  审批流程
                </div>
                <div
                  class="desc"
                >
                  根据实际业务流转变更流程模板
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          配置审批流程模板
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.833 1.5c-.736 0-1.333.597-1.333 1.333V3.5h13.667c.736 0 1.333.597 1.333 1.333v15.334q0 .172-.042.333h.709c.736 0 1.333-.597 1.333-1.333V2.833c0-.736-.597-1.333-1.333-1.333z"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.833 3.5c-.736 0-1.333.597-1.333 1.333v16.334c0 .736.597 1.333 1.333 1.333h14.334c.736 0 1.333-.597 1.333-1.333V4.833c0-.736-.597-1.333-1.333-1.333zM7 9.667C7 9.298 7.298 9 7.667 9h6.666c.368 0 .667.298.667.667v.666a.667.667 0 0 1-.667.667H7.667A.667.667 0 0 1 7 10.333zm0 5c0-.368.298-.667.667-.667h3.666c.368 0 .667.299.667.667v.666a.667.667 0 0 1-.667.667H7.667A.667.667 0 0 1 7 15.333z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP4
                </div>
                <div
                  class="step-title"
                >
                  数据查询与变更
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  SQL窗口
                </div>
                <div
                  class="desc"
                >
                  使用在线的数据编辑器（CloudBeaver）进行SQL查询和编辑
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          进入SQL工作台
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  数据变更
                </div>
                <div
                  class="desc"
                >
                  在线提起SQL变更申请，经由审批流程完成上线
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起SQL工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  数据导出
                </div>
                <div
                  class="desc"
                >
                  发起数据导出工单，审核通过后获取数据集。
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起导出工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container"
        >
          <div
            class="ant-col icon-wrapper"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                color="#ffffff"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.33 3.271a3.5 3.5 0 0 1 4.472 4.474L20.647 18.59l-2.122 2.121L7.68 9.867a3.5 3.5 0 0 1-4.472-4.474L5.444 7.63a1.5 1.5 0 1 0 2.12-2.121L5.33 3.27zm10.367 1.884 3.182-1.768 1.414 1.414-1.768 3.182-1.768.354-2.12 2.121-1.415-1.414 2.12-2.121zm-7.071 7.778 2.12 2.122-4.95 4.95A1.5 1.5 0 0 1 3.58 17.99l.097-.107z"
                />
                <path
                  d="m15.697 5.155 3.182-1.768 1.414 1.414-1.768 3.182-1.768.354-2.12 2.121-1.415-1.414 2.12-2.121zm-7.071 7.778 2.12 2.122-4.95 4.95A1.5 1.5 0 0 1 3.58 17.99l.097-.107z"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP5
                </div>
                <div
                  class="step-title"
                >
                  运维与审计
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap"
            >
              <div
                class="ant-col ant-col-8 content-wrapper"
              >
                <div
                  class="sub-title"
                >
                  操作审计
                </div>
                <div
                  class="desc"
                >
                  审计平台内用户操作
                </div>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
                      type="button"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          SQLE操作记录
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`App render App when token is not existed 1`] = `
<div>
  <section
    class="css-1zkush"
  >
    <div
      class="css-9y19rd"
    >
      <div
        class="banner"
      >
        <img
          alt="left_bg"
          class="login-background-img"
          src="/static/image/login-left-bg.png"
        />
      </div>
    </div>
    <div
      class="css-zhd3kf"
    >
      <div
        class="login-page-right-content"
      >
        <div
          class="content-header"
        >
          <div
            class="logo"
          >
            <img
              alt="logo_img"
              src="custom_logo_mock_src_url"
            />
          </div>
          <div
            class="title"
          >
            <span
              class="label label-primary"
            >
              Action
            </span>
            <span
              class="label label-base"
            >
              SQLE
            </span>
          </div>
        </div>
        <form
          class="ant-form ant-form-horizontal"
        >
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-affix-wrapper-focused basic-input-wrapper login-form-field css-1pd1cd5"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <svg
                          color="#C3C6CD"
                          height="19"
                          viewBox="0 0 12 12"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="currentColor"
                          >
                            <path
                              d="M4.457 4.684a2.182 2.182 0 1 1 3.087-3.086 2.182 2.182 0 0 1-3.087 3.086M10.584 9.47a3.49 3.49 0 0 0-3.492-3.492H4.909A3.49 3.49 0 0 0 1.417 9.47v.218a.873.873 0 0 0 .873.874h7.42a.873.873 0 0 0 .874-.874z"
                            />
                          </g>
                        </svg>
                      </span>
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="username"
                        placeholder="用户名"
                        type="text"
                        value=""
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-password basic-input-wrapper login-form-field css-1pd1cd5"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <svg
                          color="#C3C6CD"
                          height="18"
                          viewBox="0 0 18 18"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.5 6H15a.75.75 0 0 1 .75.75v9a.75.75 0 0 1-.75.75H3a.75.75 0 0 1-.75-.75v-9A.75.75 0 0 1 3 6h1.5v-.75a4.5 4.5 0 0 1 9 0zM12 6v-.75a3 3 0 0 0-6 0V6zm-3.75 4.5V12h1.5v-1.5zm-3 0V12h1.5v-1.5zm6 0V12h1.5v-1.5z"
                            fill="currentColor"
                          />
                          <path
                            d="M12 6v-.75a3 3 0 1 0-6 0V6H4.5v-.75a4.5 4.5 0 0 1 9 0V6z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="password"
                        placeholder="密码"
                        type="password"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          checked=""
                          class="ant-checkbox-input"
                          id="userAgreement"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            已阅读并同意
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <a
                              class="ant-typography"
                              href="/user-agreement.html"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              用户协议
                            </a>
                          </div>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="ant-btn ant-btn-primary login-btn basic-button-wrapper css-geipcv"
            type="submit"
          >
            <span>
              登 录
            </span>
          </button>
        </form>
      </div>
    </div>
  </section>
</div>
`;
